src/components/modal/v2/styles/components/_offer-accordion.scss
@import '../globals/mixins';

.accordion {
    &__container {
        border: 1px solid $light-gray;
        border-radius: 12px;
        font-size: 13px;
        width: 311px;
        color: $text-main;
        margin-bottom: 10px;

        @include mobile {
            width: auto;
            margin-right: -25px;
        }

        &-expanded {
            height: 242px;
        }
        &:first-child {
            margin-top: 35px;
        }
        &.active {
            outline: 3px solid $light-blue;
            border-color: transparent;
        }
        &.v5Design {
            width: 100%;
            padding-right: 5px;
            &:not(:last-child) {
                margin-bottom: 16px;
            }
            .accordion__row {
                button {
                    border-radius: 11px;
                }
            }
        }

        &.open {
            &.v5Design {
                background-color: $white;
                outline: 3px solid $black;
                border-color: transparent;
            }
        }
    }

    &__header-container {
        font-family: $paypal-open;
        font-size: 18px;
        color: $text-main;
        display: flex;
        justify-content: space-between;
        padding: 25px 18px 22px 13px;
        background: none;
        border: none;
        width: 100%;
        cursor: pointer;

        .accordion__offer-field-header {
            &:first-child {
                .v5Design & {
                    font-weight: bold;
                }
            }
        }
    }

    &__collapsible {
        display: flex;
        flex-direction: column;
        height: 0px;
        overflow: hidden;
        transition: height 0.2s linear;

        .open & {
            height: 172px;
            transition: height 0.2s linear;
        }

        .accordion__row {
            display: flex;
            justify-content: space-between;
            padding: 25px 18px 0px 13px;

            @include smallMobile {
                padding-top: 22px;
            }

            &:first-child {
                padding-top: 0px;

                .accordion__offer-field-title {
                    color: $light-blue;

                    .v5Design & {
                        text-decoration: underline;
                    }
                }
            }

            .accordion__offer-apr-disclaimer {
                color: $gray;
                line-height: 1.3;
                padding-bottom: 9px;
            }
        }
    }
}

